# letsTrade

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  PRD.md  README.md
bot/: main.py  pyproject.toml  requirements.txt
bot/migrations/: 001_initial_schema.sql
bot/src/lets_trade/: __init__.py  cli.py
bot/src/lets_trade/api/: __init__.py  account.py  auth.py  client.py  config.py  order.py  stock.py
bot/src/lets_trade/api_server/: __init__.py  auth.py  dependencies.py  main.py
bot/src/lets_trade/api_server/routers/: __init__.py  account.py  orders.py  portfolio.py  signals.py  stocks.py  strategies.py  system.py  trades.py
bot/src/lets_trade/api_server/schemas/: __init__.py  account.py  common.py  order.py  portfolio.py  signal.py  stock.py  strategy.py  trade.py
bot/src/lets_trade/db/: __init__.py  connection.py  repository.py
bot/src/lets_trade/models/: __init__.py  base.py  portfolio.py  signal.py  strategy.py  trade.py
bot/src/lets_trade/services/: __init__.py  telegram.py
bot/src/lets_trade/strategies/: __init__.py  backtest.py  base.py  config_loader.py  risk.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/hooks/: use-notifications.ts  use-realtime.ts
dashboard/src/lib/ai/: strategy-tools.ts  (+1 more)
docs/: ISSUE_AI_STRATEGY_BUILDER.md
supabase/: config.toml
supabase/functions/_shared/: supabase.ts
supabase/functions/notify-alert/: index.ts
supabase/functions/notify-trade/: index.ts
supabase/migrations/: 20260204010000_notifications.sql
(+19 files in other folders)
