[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lets-trade"
version = "0.1.0"
description = "LS증권 API 기반 주식 자동매매 프로그램"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "leehg" }
]
keywords = ["trading", "stock", "automation", "ls-securities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    "typer>=0.9.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
lets-trade = "lets_trade.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lets_trade"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
